# nuspell

./: README.md  nuspell.pc.in
src/nuspell/: Makefile.am
tests/: Makefile.am
